# cmake_vscode_example

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
include/: hello.h
src/: CMakeLists.txt  hello.c  main.c
src/algo_libs/: CMakeLists.txt  Makefile  algo.c
src/algo_libs/include/: algo.h
src/extern_lib_example/: CMakeLists.txt  main.c
src/quick_sort/: CMakeLists.txt  quick.c
src/tests_for_libs/: CMakeLists.txt  Makefile  algo_test.c  plugin_test.c
